:tada: Exercice TODO list

--- a/01_introduction.html
+++ b/01_introduction.html
@@ -21,7 +21,7 @@
     <p>{{ a * b }}</p>
 
     <ul>
-        <li v-for=" (m, index) of movies" v-bind:key="index">{{ m }}</li>
+        <li v-for=" (m, index) of movies" v-bind:key="m">{{ m }}</li>
     </ul>
 
     <ul>
